feat: Add header and navigation bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,113 @@
-body {
-  background-color: black;
-  color: white;
+:root {
+  --color-background: black;
+  --color-text: white;
+  --color-hover: #ff0000;
+  --transition-duration: 0.45s;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--color-background);
+  color: var(--color-text);
+  font-family: "Lato", sans-serif;
+  font-size: 1rem;
+}
+
+a {
+  color: var(--color-text);
+  text-decoration: none;
+  transition: color var(--transition-duration) ease;
+}
+
+/* Navegação */
+.c-navegation {
+  background-color: black;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding: 1rem 0 0.5rem 0;
+  font-weight: 600;
+}
+
+.c-navegation__menu {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.c-navegation__list {
+  display: flex;
+  list-style: none;
+  gap: 2rem;
+}
+
+.c-navegation__item {
+  cursor: pointer;
+  transition: color var(--transition-duration) ease;
+}
+
+.c-navegation__item:hover {
+  color: var(--color-hover);
+}
+
+/* Social Icons */
+.c-navegation__social {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.c-navegation__social__list {
+  display: flex;
+  gap: 0.1rem;
+  list-style: none;
+  margin: 0;
+}
+
+.social-contact__icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 1em;
+}
+
+.c-navegation__social__items a {
+  transition: color var(--transition-duration) ease;
+}
+
+.c-navegation__social__items a:hover {
+  color: var(--color-hover);
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+  body {
+    margin: 0 2rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  body {
+    margin: 0 4rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    margin: 0 16rem;
+  }
+
+  .c-vertical-line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-text);
+  }
+}
+
+/* Fonts:
+  light = font-weight: 300
+  black = font-weight: 900
+  bold = font-weight: 600
+  */
