feat: added introduction section

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,12 @@
   --color-background: black;
   --color-text: white;
   --color-hover: #ff0000;
+  --color-darkred: #630000;
   --transition-duration: 0.45s;
+  --width-laptop: 78rem;
+  --margin-laptop: 6rem;
+  --gap-small: 0.85rem;
+  --border-small: 0.625rem;
 }
 
 * {
@@ -11,11 +16,19 @@
   box-sizing: border-box;
 }
 
+html {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+
 body {
   background-color: var(--color-background);
   color: var(--color-text);
   font-family: "Lato", sans-serif;
   font-size: 1rem;
+  max-width: var(--width-laptop);
+  margin: 0 var(--margin-laptop);
 }
 
 a {
@@ -81,33 +94,80 @@ a {
   color: var(--color-hover);
 }
 
-/* Media Queries */
-@media (max-width: 768px) {
-  body {
-    margin: 0 2rem;
-  }
+/* Introduction */
+
+.c-introduction {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--gap-small);
+  align-items: center;
+  padding: 5rem 0;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  body {
-    margin: 0 4rem;
-  }
+/* Introduction messages */
+
+.c-introduction__message {
+  width: 50%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
 }
 
-@media (min-width: 1024px) {
-  body {
-    margin: 0 16rem;
-  }
-
-  .c-vertical-line {
-    width: 100%;
-    height: 1px;
-    background-color: var(--color-text);
-  }
+.c-introduction__message__container {
+  display: grid;
+  grid-template-columns: 32rem;
+  gap: var(--gap-small);
 }
 
-/* Fonts:
-  light = font-weight: 300
-  black = font-weight: 900
-  bold = font-weight: 600
-  */
+.c-introduction__message p {
+  font-size: 1.125rem;
+  padding-right: 2rem;
+}
+
+.c-introduction__message p:nth-of-type(1) {
+  font-style: normal;
+}
+
+.c-introduction__message span {
+  background-color: var(--color-darkred);
+  border-radius: 7.5rem 4px 7.5rem 4px;
+}
+
+.c-introduction__message a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 3rem;
+  background-color: #898989;
+  border: white;
+  border-style: solid;
+  border-width: 1.5px;
+  border-radius: var(--border-small);
+  cursor: pointer;
+  gap: 10px;
+  font-weight: 600;
+}
+
+.c-introduction__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.c-introduction__image__container {
+  display: grid;
+  grid-template-columns: 26rem 3rem;
+}
+
+.c-introduction__image img {
+  width: 26rem;
+  height: 26rem;
+  border-radius: var(--border-small) 0 0 var(--border-small);
+}
+
+.c-introduction__image span {
+  width: 3rem;
+  height: 100%;
+  background-color: var(--color-darkred);
+}
