--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,13 @@ a {
 section {
   padding: var(--gap-section);
 }
+
+.c-geral-background {
+  padding-top: 4rem;
+  background-color: #000;
+  background: linear-gradient(295deg, #fdfdfd 36%, #000 36.1%);
+  background-repeat: no-repeat;
+}
 /* Navegação */
 .c-navegation {
   background-color: black;
@@ -188,7 +195,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 26rem;
+  width: 16rem;
   height: 3rem;
   border-style: solid;
   border-color: white;
@@ -205,6 +212,10 @@ section {
   flex-shrink: 0;
   justify-content: center;
   gap: var(--gap-large);
+}
+
+.c-skills a {
+  margin-top: -2rem;
 }
 
 .c-skills__title {
@@ -307,6 +318,13 @@ section {
 .c-skills__table__vertical-line {
   width: 1px;
   height: 70%;
+  border-radius: 30%;
+  background-color: white;
+}
+
+.c-horizontal-line {
+  width: 100%;
+  height: 1px;
   border-radius: 30%;
   background-color: white;
 }
