--- a/src/styles.css
+++ b/src/styles.css
@@ -7,15 +7,19 @@
   --width-laptop: 78rem;
   --margin-laptop: 6rem;
   --gap-small: 0.85rem;
+  --gap-medium: 2rem;
   --gap-large: 4rem;
-  --gap-section: 6rem;
-  --border-radius-small: 0.625rem;
+  --gap-section: 8rem;
+  --border-radius-small: 0.375rem;
+  --border-radius-medium: 0.625rem;
   --border-width-small: 1px;
   --grid-skill-size: 20rem;
   --grid-skill-gradient: linear-gradient(120deg, #979797 3.4%, #131313 117.1%);
   --grid-skill-tamplate-columns: 20rem auto 20rem auto 20rem;
   --grid-skill-table-height: 10rem;
   --grid-skill-table-widht: 61rem;
+  --projects-card-width: 20rem;
+  --projects-card-height: 26rem;
 }
 
 * {
@@ -119,7 +123,7 @@ section {
   flex-wrap: wrap;
   gap: var(--gap-small);
   align-items: center;
-  padding: 2rem 0;
+  padding: 6rem 0 0 0;
 }
 
 /* Introduction messages */
@@ -181,7 +185,7 @@ section {
 .c-introduction__image img {
   width: 26rem;
   height: 26rem;
-  border-radius: var(--border-radius-small) 0 0 var(--border-radius-small);
+  border-radius: var(--border-radius-medium) 0 0 var(--border-radius-medium);
 }
 
 .c-introduction__image span {
@@ -205,6 +209,8 @@ section {
   font-family: "Iceland", serif;
   margin: 0 auto;
 }
+
+/* Skills */
 
 .c-skills {
   display: flex;
@@ -250,6 +256,7 @@ section {
   border-width: var(--border-width-small);
   border-color: white;
   border-style: solid;
+  box-shadow: 0.25rem 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.25);
 }
 
 .c-skills__top-table div {
@@ -274,6 +281,7 @@ section {
   border-width: var(--border-width-small);
   border-color: white;
   border-style: solid;
+  box-shadow: 0.25rem 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.25);
 }
 
 .c-skills__middle-table div {
@@ -298,6 +306,7 @@ section {
   border-width: var(--border-width-small);
   border-color: white;
   border-style: solid;
+  box-shadow: 0.25rem 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.25);
 }
 
 .c-skills__bot-table div {
@@ -320,6 +329,119 @@ section {
   height: 70%;
   border-radius: 30%;
   background-color: white;
+}
+
+/* Projects */
+
+.c-projects {
+  width: 69rem;
+  height: 63rem;
+  display: grid;
+  grid-template-rows: 8rem auto;
+  justify-content: center;
+  margin: 0 auto;
+  padding: var(--gap-large) 0;
+  gap: var(--gap-large);
+  border-radius: 1rem;
+  border: 0.5rem solid #250000;
+  background: linear-gradient(
+    328deg,
+    #130000 31.73%,
+    var(--color-darkred) 98.69%
+  );
+
+  box-shadow: 0.5rem 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.38);
+}
+
+.c-projects + svg {
+  position: absolute;
+  margin: -33.5rem 0;
+  z-index: 1;
+}
+
+.c-projects__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36rem;
+  background-image: url("../res/icon/projects/title-backgorund.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  font-family: "Iceland", serif;
+  font-style: normal;
+  font-size: 5rem;
+  margin: 0 auto;
+  z-index: 2;
+}
+
+.c-projects__category {
+  display: flex;
+  width: 60rem;
+  justify-content: center;
+  z-index: 2;
+}
+
+/* Projects hand image */
+
+.c-projects__category div:first-child {
+  background-image: url("../res/icon/projects/hand-background.svg");
+  background-repeat: no-repeat;
+  background-size: 20rem 24.4rem;
+  background-position-x: center;
+  display: grid;
+  margin: auto;
+}
+
+.c-projects__category div:first-child img {
+  margin: 0 auto;
+}
+
+/* Projects button */
+.c-projects__button {
+  all: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 10rem;
+  height: 2rem;
+  background-color: white;
+  border: var(--border-width-small) solid white;
+  border-radius: 0.375rem;
+  font: bold 1.125rem "Lato", serif;
+  color: black;
+  margin: 0;
+}
+
+/* Projects cards margins */
+
+.c-projects__category div:nth-of-type(1) {
+  margin-top: 10rem;
+}
+.c-projects__category div:nth-of-type(2) {
+  margin-top: 5rem;
+}
+.c-projects__category div:nth-of-type(3) {
+  margin-top: 0;
+}
+
+.c-projects__card {
+  width: 23rem;
+  height: 24.5rem;
+  display: grid;
+  justify-content: center;
+  gap: var(--gap-medium);
+  filter: drop-shadow(1rem 0.8rem 0.5rem #00000070);
+}
+
+.c-projects__card a {
+  margin: 0 0 0 6.5rem;
+}
+
+.c-projects__card img {
+  margin: auto;
+  width: 12rem;
+  width: 18rem;
 }
 
 .c-horizontal-line {
