feat: add new about section

--- a/src/styles.css
+++ b/src/styles.css
@@ -218,6 +218,50 @@ section {
   margin: auto;
 }
 
+/* About */
+
+.c-about {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: var(--gap-large);
+}
+
+.c-about__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 26rem;
+  height: auto;
+  background-image: url("../res/icon/about/title-background.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: "Iceland", serif;
+  font-size: 5rem;
+  margin: 0 auto;
+}
+
+.c-about img {
+  width: 64rem;
+}
+
+.c-about__buttom {
+  all: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16rem;
+  height: 3rem;
+  border-style: solid;
+  border-color: white;
+  border-width: var(--border-width-small);
+  border-radius: var(--border-radius-small);
+  font-size: 2rem;
+  font-family: "Iceland", serif;
+  margin: auto;
+}
+
 /* Skills */
 
 .c-skills {
@@ -238,7 +282,7 @@ section {
   align-items: center;
   width: 26rem;
   height: auto;
-  background-image: url("../res/icon/skills/Skills.svg");
+  background-image: url("../res/icon/skills/title-background.svg");
   background-repeat: no-repeat;
   background-position: center;
   font-family: "Iceland", serif;
